{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "ObservationControls",
            "id": "3a42cba7-e184-451d-83d7-cb48a4476a87",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "Button",
                    "id": "2dcc8702-ec55-4398-9860-04616566403f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleTorch",
                    "type": "Button",
                    "id": "aaf01f95-0813-41e8-8dc0-a3df4e475551",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "W/D",
                    "id": "7a7b63ea-e66d-4fd8-a81e-487fb6fd18b2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4211e4ae-a5c8-4629-970c-18cc9bf55a2a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "15f8a3af-faab-44a1-9a2a-5ae5a05793d1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "865eeaaf-9018-4bab-86ef-e6777a911d17",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleTorch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}